0.1006  11 Dec 2009
   - Pass $c along to find_user method so overridden user_class users can
     get at models (or whatever crazy things they might do) (gphat)
   - Add an ldap_connection method to the user class, which will return
     an LDAP connection bound as the user who authenticated.
   - Trim trailing whitespace from submitted usernames otherwise we generate
     bad LDAP queries.

0.1005  30 April 2009
   - Stop throwing an exception when the lookup_user method fails
      to find a user and instead return undef. (t0m)
   - Add tests for above (t0m)
   - Change documentation which still refers to the old ::Plugin:: style
     auth system to use ->authenticate instead of ->login, and not say that
     you need to do things manually to have multiple stores. (t0m)

0.1004  21 Oct 2008
   - Add the ability to have the user inflated into a custom
     user class with the user_class option (t0m)
   - Add the ability for role lookup to be performed within
     the same (user) bind context that the user's password is
     checked in (t0m)

0.1003  10 Sept 2008
    - get entries in array context rather than scalar context, 
      allowing for multiple values. patch by scpham.
    - lc() to compare Net::LDAP results with supplied $id
      bug reported via RT #39113


0.1002  9 July 2008
    - tests updated to use Net::LDAP::Server::Test 0.03


0.1001  9 April 2008
    - matthewr pointed out that the SYNOPSIS 'use Catalyst' line is wrong.
    - imacat reported that t/03-entry was failing when Catalyst::Model::LDAP was
      not installed. Fixed RT# 34777.


0.1000  4 Feb 2008
    - forked from Catalyst::Plugin::Authentication::Store::LDAP and name changed 
      to Catalyst::Authentication::Store::LDAP
    - tests now use Net::LDAP::Server::Test instead of relying on openldap.org
    - changed release date for 0.0600
    - added AD config suggestions from matija@serverflow.com
    - bumped req base Auth package to 0.10003